# RobustChargingNetworkTaxi

./: .gitignore  Cargo.toml  Readme.md  THIRDPARTY.yml  shell.nix
column_generation/: Cargo.toml  draw.awk
column_generation/src/: branching_filter.rs  dag_builder.rs  lib.rs  metrics.rs  pattern_pool.rs  rcsp.rs
column_generation/src/fixed_size/: benders.rs  benders_robust.rs  benders_variable.rs  brancher.rs  cg_model.rs  check_feasibility.rs  mod.rs  policy_feasibility.rs  scenario_manager.rs  simulation_feasibility.rs  site_conf.rs  solution_approach.rs  solution_approach_robust.rs  solution_approach_variable.rs
pipeline/: Analysis.smk  BuildBinaries.smk  BuildClusterBinaries.smk  CompareMethods.smk  CrossOpt.smk  Manifest.toml  MultiFactor_1.smk  NewIntegrated.smk  PaperStudies.smk  PerformanceScenarios.smk  Preprocessing.smk  Project.toml  RealCase.smk  Robust.smk  Simulation.smk  Sizing.smk  SnakeOld.smk  Snakefile  Study.smk  TechCase.smk  Tmp.smk  VariableSize.smk  analysis_realcase.jl  common.smk  config.yaml  environment.yaml  schedule_sbatch.py
pipeline/input_data/: battery_1.toml  battery_2.toml  battery_3.toml  battery_4.toml
pipeline/preprocessing/: build_distance_cache.jl  cap_vehicle_duration.py  create_rc_battery.py  determine_distribution.py  evaluate_cross_result.py  evaluate_cross_result_dist.py  evaluate_cross_result_rc.py  evaluate_cross_result_tc.py  extract_infeasible_vehicles.py  extract_site_results.py  find_lowest_opt_log.py  find_median_opt_log.py  fix_trips.py  generate_charging_function.py  generate_sample.py  instance_stats.py  intersection_vehicles.py  kde_sampler.py  keep_vehicle_trips.py  merge_cases.py  opt_log_to_cuts.py  opt_log_to_trips.py  opt_log_to_trips_rc.py  opt_log_to_trips_strat.py  opt_log_to_trips_tc.py  opt_log_to_vehicles.py  opt_log_to_vehicles_rc.py  opt_log_to_vehicles_strat.py  opt_log_to_vehicles_tc.py  plot_bounds.py  plot_site_utilisation.py  process_sites.py  process_trips.jl  process_trips.py  process_trips_orig.jl  process_trips_repl.jl  process_vehicles.py  project_between_stepped_sites.py  remove_infeasible_with_capacity.py  resample_till_feasible.py  (+9 more)
shared/: Cargo.toml
shared/benches/: my_benchmark.rs
shared/src/: battery.rs  custom_hashmap.rs  lib.rs  location.rs  print_metrics.rs  reachable_site.rs  segment.rs  segment_index.rs  site.rs  solution.rs  solution_method.rs  vehicle.rs  vehicle_index.rs
shared/tests/: soc.rs
