[package]
name = "column_generation"
version = "0.1.0"
authors = ["Gregor Godbersen <git@doamo.de>"]
edition = "2021"

[dependencies]

shared = { path = "../shared" }

typed-arena = "*"
petgraph = "*"
ndarray = "*"
grb = "1.3.0"
indexmap = "*"
chrono = "*"
rand = "*"
crossbeam = "*"
crossbeam-utils = "*"
crossbeam-deque = "*"
dipstick = {version="*",optional=true}
colored = "*"
ctrlc = "*"
enum_dispatch = "*"
snowflake = "*"
log = "*"
clap = "2.34.0"
rust_hawktracer= "*"
itertools = "*"
timer = "*"
tempfile="*"
binary-heap-plus = "*"
kmedoids = "*"
rand_distr = "*"

[features]
default=[]

opt=["column_generation_exit_early",
    "column_generation_sometimes_integer",
    "pattern_generation_improve_cuts"]

snakemake=["opt","cutting_plane_debug"]
profiling_enabled = ["rust_hawktracer/profiling_enabled"]
perf_statistics=["shared/perf_statistics","profiling_enabled","dipstick"]

column_generation_timeout=[]
column_generation_sometimes_integer=[]

debug_write_models_to_file=[]

dag_output=[]

vistnum_branching=[]


catch_cancel=[]
progress_bar=[]

column_generation_exit_early=[]
pattern_generation_improve_cuts=[]
pattern_generation_debug=[]
column_generation_debug=["expensive_feasibility_checks","branching_debug"]
expensive_feasibility_checks=["column_generation_validate"]
column_generation_validate=[]
branching_debug=[]
cutting_plane_debug=[]
cutting_plane_lifting_debug=[]
chunk_debug=[]

progress_icons = []
level_print=[]

infeasibility_events=[]

simulation_debug=[]
